fix: make settings screen pleasant to scroll on ios

--- a/src/settings-component.css
+++ b/src/settings-component.css
@@ -43,6 +43,7 @@ settings-component product-versions {
   display: block;
   border: 0.25em solid var(--divider-color);
   overflow: auto;
+  -webkit-overflow-scrolling: touch;
 }
 
 settings-component settings-header {
